<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_5"
        android:fitsSystemWindows="true"
        tools:context=".ui.detail.DetailFragment">


        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:scrollbars="none"
            android:scrollingCache="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:contentDescription="@string/image_recipe"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ceviche" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-70dp"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/spacing_large"
                        android:layout_marginRight="@dimen/spacing_large"
                        android:background="@android:color/white"
                        app:cardCornerRadius="2dp"
                        app:cardElevation="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/spacing_large"
                            android:paddingRight="@dimen/spacing_large"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="60dp"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/textName"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/ceviche"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                                        android:textColor="@color/grey_90" />

                                    <TextView
                                        android:id="@+id/textOrigin"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/peru"
                                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                                        android:textColor="@color/grey_40" />

                                </LinearLayout>

                                <ImageButton
                                    android:layout_width="wrap_content"
                                    android:layout_height="50dp"
                                    android:background="?attr/selectableItemBackgroundBorderless"
                                    android:contentDescription="@string/description_location"
                                    android:padding="@dimen/spacing_medium"
                                    app:srcCompat="@drawable/baseline_location_on_24"
                                    app:tint="@color/grey_60" />

                            </LinearLayout>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:layout_marginLeft="@dimen/spacing_middle"
                                android:layout_marginRight="@dimen/spacing_middle"
                                android:background="@color/grey_10" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_middle"
                                android:text="@string/detail_description"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="@color/grey_90"
                                app:fontFamily="sans-serif-medium" />


                            <TextView
                                android:id="@+id/textDescription"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_middle"
                                android:lineSpacingExtra="@dimen/spacing_small"
                                android:text="@string/long_lorem_ipsum_2"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/grey_60" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_middle"
                                android:text="@string/preparation"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="@color/grey_90"
                                app:fontFamily="sans-serif-medium" />

                            <TextView
                                android:id="@+id/textPreparation"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_middle"
                                android:lineSpacingExtra="@dimen/spacing_small"
                                android:text="@string/long_lorem_ipsum_2"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textColor="@color/grey_60" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_middle"
                                android:text="@string/ingredients"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="@color/grey_90"
                                app:fontFamily="sans-serif-medium" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/recyclerView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/spacing_middle"
                                android:layout_marginBottom="@dimen/spacing_medium"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                                />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_large" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_margin="@dimen/spacing_large"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/description_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_back_24"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>